applications/proxy/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-basic-auth-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: sabnzbd.home.juli.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - sabnzbd.home.juli.sh
      secretName: sabnzbd-tls
